은지 파일 다운

--- a/은지_hansang.ipynb
+++ b/은지_hansang.ipynb
@@ -21208,35 +21208,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hsrhe\\anaconda3\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: One or several characters couldn't be converted correctly from euc-kr to UTF-8.  This warning will not be emitted anymore\n",
+      "  return ogr_read(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EMD 레이어 컬럼: ['EMD_CD', 'EMD_ENG_NM', 'EMD_KOR_NM', 'geometry']\n",
-      "                     대지위치     법정동코드 법정동명   세대수\n",
-      "10    서울특별시 광진구 자양동 843-1  11215105  자양동  16.0\n",
-      "11  서울특별시 광진구 자양동 227-273  11215105  자양동  10.0\n",
-      "17   서울특별시 광진구 중곡동 257-21  11215101  중곡동   3.0\n",
-      "18   서울특별시 광진구 중곡동 163-35  11215101  중곡동   2.0\n",
-      "22    서울특별시 광진구 중곡동 29-22  11215101  중곡동   6.0\n",
-      "23    서울특별시 광진구 중곡동 51-41  11215101  중곡동   3.0\n",
-      "29    서울특별시 광진구 중곡동 103-6  11215101  중곡동   6.0\n",
-      "30   서울특별시 광진구 중곡동 103-18  11215101  중곡동   7.0\n",
-      "31   서울특별시 광진구 중곡동 104-20  11215101  중곡동   7.0\n",
-      "32   서울특별시 광진구 중곡동 104-44  11215101  중곡동   8.0\n",
-      "43   서울특별시 광진구 중곡동 647-11  11215101  중곡동   6.0\n",
-      "44     서울특별시 광진구 능동 240-9  11215102   능동   6.0\n",
-      "45    서울특별시 광진구 구의동 79-30  11215103  구의동   8.0\n",
-      "46   서울특별시 광진구 중곡동 141-19  11215101  중곡동   8.0\n",
-      "47    서울특별시 광진구 중곡동 288-6  11215101  중곡동   8.0\n",
-      "48    서울특별시 광진구 중곡동 294-9  11215101  중곡동   8.0\n",
-      "49    서울특별시 광진구 중곡동 73-15  11215101  중곡동   8.0\n",
-      "50   서울특별시 광진구 중곡동 101-20  11215101  중곡동  16.0\n",
-      "52    서울특별시 광진구 중곡동 51-45  11215101  중곡동   7.0\n",
-      "64    서울특별시 광진구 군자동 48-60  11215109  군자동   7.0\n"
+      "읽어온 컬럼: ['BASE_DATE', 'ADM_NM', 'ADM_CD', 'geometry']\n",
+      "                     대지위치 행정동코드 행정동명   세대수\n",
+      "10    서울특별시 광진구 자양동 843-1   NaN  NaN  16.0\n",
+      "11  서울특별시 광진구 자양동 227-273   NaN  NaN  10.0\n",
+      "17   서울특별시 광진구 중곡동 257-21   NaN  NaN   3.0\n",
+      "18   서울특별시 광진구 중곡동 163-35   NaN  NaN   2.0\n",
+      "22    서울특별시 광진구 중곡동 29-22   NaN  NaN   6.0\n",
+      "23    서울특별시 광진구 중곡동 51-41   NaN  NaN   3.0\n",
+      "29    서울특별시 광진구 중곡동 103-6   NaN  NaN   6.0\n",
+      "30   서울특별시 광진구 중곡동 103-18   NaN  NaN   7.0\n",
+      "31   서울특별시 광진구 중곡동 104-20   NaN  NaN   7.0\n",
+      "32   서울특별시 광진구 중곡동 104-44   NaN  NaN   8.0\n",
+      "43   서울특별시 광진구 중곡동 647-11   NaN  NaN   6.0\n",
+      "44     서울특별시 광진구 능동 240-9   NaN  NaN   6.0\n",
+      "45    서울특별시 광진구 구의동 79-30   NaN  NaN   8.0\n",
+      "46   서울특별시 광진구 중곡동 141-19   NaN  NaN   8.0\n",
+      "47    서울특별시 광진구 중곡동 288-6   NaN  NaN   8.0\n",
+      "48    서울특별시 광진구 중곡동 294-9   NaN  NaN   8.0\n",
+      "49    서울특별시 광진구 중곡동 73-15   NaN  NaN   8.0\n",
+      "50   서울특별시 광진구 중곡동 101-20   NaN  NaN  16.0\n",
+      "52    서울특별시 광진구 중곡동 51-45   NaN  NaN   7.0\n",
+      "64    서울특별시 광진구 군자동 48-60   NaN  NaN   7.0\n"
      ]
     }
    ],
@@ -21246,17 +21254,17 @@
     "import pandas as pd\n",
     "\n",
     "# ──────────────────────────────────────────────\n",
-    "# [0] 환경 설정: 법정동(EMD) 경계 shapefile 경로 확인\n",
+    "# [0] 법정동(읍·면·동) 경계 shapefile 경로 확인\n",
     "# ──────────────────────────────────────────────\n",
-    "shp_path = \"Data/emd_20230729 (1)/emd.shp\"\n",
+    "shp_path = \"Data/3. 2024년 2분기 기준 행정동 경계/bnd_dong_00_2024_2Q.shp\"\n",
     "if not os.path.exists(shp_path):\n",
     "    raise FileNotFoundError(f\"{shp_path} 파일이 존재하지 않습니다.\")\n",
     "\n",
     "# ──────────────────────────────────────────────\n",
-    "# [1] 빌라 데이터 불러오기\n",
+    "# [1] 빌라 데이터 로드\n",
     "# ──────────────────────────────────────────────\n",
     "df_villa = pd.read_csv(\"Data/빌라데이타.csv\", encoding=\"utf-8\")\n",
-    "df_villa = df_villa.dropna(subset=[\"위도\", \"경도\"])\n",
+    "df_villa = df_villa.dropna(subset=[\"위도\",\"경도\"])\n",
     "df_villa[\"위도\"] = pd.to_numeric(df_villa[\"위도\"], errors=\"coerce\")\n",
     "df_villa[\"경도\"] = pd.to_numeric(df_villa[\"경도\"], errors=\"coerce\")\n",
     "\n",
@@ -21267,41 +21275,37 @@
     ")\n",
     "\n",
     "# ──────────────────────────────────────────────\n",
-    "# [2] 법정동(EMD) 경계 shapefile 읽기\n",
+    "# [2] 행정동 경계 읽기\n",
     "# ──────────────────────────────────────────────\n",
     "gdf_emd = gpd.read_file(shp_path, encoding=\"euc-kr\")\n",
+    "print(\"읽어온 컬럼:\", gdf_emd.columns.tolist())  \n",
+    "# 기대: ['BASE_DATE','ADM_NM','ADM_CD','geometry']\n",
     "\n",
-    "# (확인) 컬럼명 출력\n",
-    "print(\"EMD 레이어 컬럼:\", gdf_emd.columns.tolist())\n",
-    "# 예: ['EMD_CD','EMD_KOR_NM', … , 'geometry']\n",
-    "\n",
-    "# 좌표계 지정(EPSG:5179) & WGS84(EPSG:4326) 변환\n",
+    "# 좌표계 지정(EPSG:5179) 후 WGS84(4326)로 변환\n",
     "if gdf_emd.crs is None:\n",
     "    gdf_emd.set_crs(epsg=5179, inplace=True)\n",
     "gdf_emd = gdf_emd.to_crs(epsg=4326)\n",
     "\n",
     "# ──────────────────────────────────────────────\n",
-    "# [3] 광진구 법정동(코드 '11215*')만 추출\n",
+    "# [3] 광진구 ADM_CD == '11215*' 행정동만 필터\n",
     "# ──────────────────────────────────────────────\n",
-    "gdf_gj = gdf_emd[\n",
-    "    gdf_emd[\"EMD_CD\"].astype(str).str.startswith(\"11215\")\n",
-    "].copy()\n",
+    "gdf_gj = gdf_emd[gdf_emd[\"ADM_CD\"].astype(str).str.startswith(\"11215\")].copy()\n",
     "\n",
     "# ──────────────────────────────────────────────\n",
-    "# [4] 공간 조인: 빌라 지점에 '법정동명'·'법정동코드' 붙이기\n",
+    "# [4] 공간 조인: 빌라 포인트에 행정동명·코드 붙이기\n",
     "# ──────────────────────────────────────────────\n",
     "gdf_out = gpd.sjoin(\n",
     "    gdf_villa,\n",
-    "    gdf_gj[[\"EMD_CD\", \"EMD_KOR_NM\", \"geometry\"]],\n",
+    "    gdf_gj[[\"ADM_CD\",\"ADM_NM\",\"geometry\"]],\n",
     "    how=\"left\",\n",
     "    predicate=\"within\"\n",
     ").rename(columns={\n",
-    "    \"EMD_CD\": \"법정동코드\",\n",
-    "    \"EMD_KOR_NM\": \"법정동명\"\n",
+    "    \"ADM_CD\":\"행정동코드\",\n",
+    "    \"ADM_NM\":\"행정동명\"\n",
     "})\n",
     "\n",
     "# ──────────────────────────────────────────────\n",
-    "# [5] 세대수 > 0 필터링\n",
+    "# [5] 세대수 > 0 필터\n",
     "# ──────────────────────────────────────────────\n",
     "gdf_out = gdf_out[gdf_out[\"세대수\"] > 0].copy()\n",
     "\n",
@@ -21310,15 +21314,15 @@
     "# ──────────────────────────────────────────────\n",
     "cols = [c for c in gdf_out.columns if c != \"geometry\"]\n",
     "gdf_out[cols].to_csv(\n",
-    "    \"Data/빌라_법정동_세분화.csv\",\n",
+    "    \"Data/빌라_행정동_세분화.csv\",\n",
     "    index=False,\n",
     "    encoding=\"utf-8-sig\"\n",
     ")\n",
     "\n",
     "# ──────────────────────────────────────────────\n",
-    "# [7] 결과 미리보기\n",
+    "# [7] 미리보기\n",
     "# ──────────────────────────────────────────────\n",
-    "print(gdf_out[[\"대지위치\", \"법정동코드\", \"법정동명\", \"세대수\"]].head(20))\n"
+    "print(gdf_out[[\"대지위치\",\"행정동코드\",\"행정동명\",\"세대수\"]].head(20))\n"
    ]
   },
   {
